# ensiie-s3-webservice

./: README.txt  docker-compose.yaml
flowable-db/: engine-db.lock.db  engine-db.mv.db  engine-db.trace.db
flowable-java-class/: dependency-reduced-pom.xml  pom.xml
flowable-java-class/src/main/java/org/flowable/: CallGrpcApi.java  CallRestApi.java
flowable-java-class/src/test/java/org/flowable/: AppTest.java
graphql/: Dockerfile  build.gradle
graphql/src/main/java/com/syiw/insurance/: InsuranceApplication.java
graphql/src/main/java/com/syiw/insurance/Controllers/: FraudController.java
graphql/src/main/java/com/syiw/insurance/Enums/: FraudRiskLevel.java
graphql/src/main/java/com/syiw/insurance/Model/: ClaimInput.java
graphql/src/main/resources/: application.properties
graphql/src/main/resources/graphql/: schema.graphqls
graphql/src/test/java/com/syiw/insurance/: InsuranceApplicationTests.java
identity-verification/: Cargo.toml  Dockerfile
identity-verification/src/: main.rs
policy-validation/: Cargo.toml  Dockerfile  build.rs
policy-validation/proto/: policy.proto
policy-validation/prototype/: policy.proto
policy-validation/src/: main.rs
