[package]
name = "identity-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["macros"]}
axum-messages = "0.8.0"
http = "1.0.0"
hyper = "1.0.1"
serde = "1"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
thiserror = "2.0.0"
futures-util = "0.3.31"
async-trait = "0.1.89"
serde_json = "1.0.145"
reqwest = "0.12.24"
futures = "0.3.31"
env_logger = "0.11.8"
tar = "0.4.44"
bytes = "1.11.0"
regex = "1.12.2"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
