[package]
name = "policy-validation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost-reflect = { version = "0.16.2", features = ["serde"] }
tonic = "0.14"
prost = "0.14.1"
tonic-prost = "0.14"

# Optional dependencies

tonic-web = { version = "0.14", optional = true }
tonic-health = { version = "0.14", optional = true }
tonic-reflection = { version = "0.14", optional = true }
tonic-types = { version = "0.14", optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7.8", optional = true }
tower = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1.16", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "fmt",
], optional = true }
prost-types = { version = "0.14", optional = true }
http = { version = "1", optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1.4", optional = true }
listenfd = { version = "1.0", optional = true }
bytes = { version = "1", optional = true }
h2 = { version = "0.4", optional = true }
tokio-rustls = { version = "0.26.1", optional = true, features = [
    "ring",
    "tls12",
], default-features = false }
hyper-rustls = { version = "0.27.0", features = [
    "http2",
    "ring",
    "tls12",
], optional = true, default-features = false }
tower-http = { version = "0.6", optional = true, features = ["trace"]}
axum = "0.8.4"
tonic-prost-build = "0.14.2"
grpc-ease = "0.1.1"
clap = { version = "4.5.51", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "*"
